# trifecta

./: .gitignore  CMakeLists.txt  CONFIG  Dockerfile  License.txt  Makefile  README.md
Compiler/: circuit.py  instructions_base.py
Compiler/GC/: instructions.py  types.py
GC/: Processor.h  SemiHonestRepPrep.h  ShareParty.hpp  ShareSecret.h  ShareSecret.hpp  ShareThread.hpp  ThreadMaster.hpp
Machines/: multi-replicated-bin-party.cpp
Networking/: Server.cpp  ServerSocket.cpp  sockets.cpp
Processor/: Processor.hpp
Programs/Circuits/: 2f_aes_128.txt  2f_aes_192.txt  2f_aes_256.txt  3f_aes_128.txt  3f_aes_192.txt  3f_aes_256.txt  4f_aes_128.txt  4f_aes_192.txt  4f_aes_256.txt  4f_comparator_128.txt  4f_comparator_16.txt  4f_comparator_32.txt  4f_comparator_64.txt  4f_sklansky_128.txt  4f_sklansky_16.txt  4f_sklansky_32.txt  4f_sklansky_64.txt  4f_wallace_16.txt  4f_wallace_32.txt  4f_wallace_64.txt  8f_comparator_128.txt  8f_comparator_16.txt  8f_comparator_32.txt  8f_comparator_64.txt  8f_sklansky_128.txt  8f_sklansky_16.txt  8f_sklansky_32.txt  8f_sklansky_64.txt  comparator_128.txt  comparator_16.txt  comparator_32.txt  comparator_64.txt  mult2_64.txt  mult_32.txt  rc_adder_128.txt  rc_adder_16.txt  rc_adder_32.txt  rc_adder_64.txt  sklansky_128.txt  sklansky_16.txt  (+6 more)
Programs/Source/: aes.mpc  basic_multiplier.mpc  comparator.mpc  mf_sklansky_adder.mpc  rc_adder.mpc  sklansky_adder.mpc  wallace.mpc
Protocols/: MamaPrep.h  MultiReplicated.h  MultiReplicated.hpp  MultiReplicatedMC.h  MultiReplicatedMC.hpp  Replicated.h  Replicated.hpp  ReplicatedInput.h  ReplicatedInput.hpp  ReplicatedMC.h  ReplicatedMC.hpp
Tools/: NetworkOptions.cpp
