cmake_minimum_required(VERSION 3.14)
project(MP_SPDZ)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(BMR)
include_directories(BMR/network)
include_directories(ECDSA)
include_directories(Exceptions)
include_directories(FHE)
include_directories(FHEOffline)
include_directories(GC)
include_directories(Machines)
include_directories(Math)
include_directories(Networking)
include_directories(OT)
include_directories(Processor)
include_directories(Protocols)
include_directories(Tools)
include_directories(Yao)
include_directories(Circuits)


add_executable(MP_SPDZ
        bin/boost-license.txt
        bin/glibc-license.txt
        bin/libsodium-license.txt
        bin/mpir-license.txt
        bin/ntl-license.txt
        bin/openssl-license.txt
        bin/README.md
        BMR/network/Client.cpp
        BMR/network/Client.h
        BMR/network/common.h
        BMR/network/Node.cpp
        BMR/network/Node.h
        BMR/network/Server.cpp
        BMR/network/Server.h
        BMR/network/utils.cpp
        BMR/network/utils.h
        BMR/AndJob.cpp
        BMR/AndJob.h
        BMR/BooleanCircuit.h
        BMR/common.h
        BMR/CommonParty.cpp
        BMR/CommonParty.h
        BMR/CommonParty.hpp
        BMR/config.h
        BMR/GarbledGate.cpp
        BMR/GarbledGate.h
        BMR/Gate.h
        BMR/Key.cpp
        BMR/Key.h
        BMR/msg_types.cpp
        BMR/msg_types.h
        BMR/Party.cpp
        BMR/Party.h
        BMR/prf.h
        BMR/ProgramParty.hpp
        BMR/proto_utils.cpp
        BMR/proto_utils.h
        BMR/RealGarbleWire.h
        BMR/RealGarbleWire.hpp
        BMR/RealProgramParty.h
        BMR/RealProgramParty.hpp
        BMR/Register.cpp
        BMR/Register.h
        BMR/Register.hpp
        BMR/Register_inline.h
        BMR/SpdzWire.h
        BMR/TrustedParty.cpp
        BMR/TrustedParty.h
        BMR/Wire.h
        Circuits/convert.cpp
        Circuits/process.cpp
        Compiler/GC/__init__.py
        Compiler/GC/instructions.py
        Compiler/GC/program.py
        Compiler/GC/types.py
        Compiler/__init__.py
        Compiler/allocator.py
        Compiler/circuit.py
        Compiler/circuit_oram.py
        Compiler/comparison.py
        Compiler/compilerLib.py
        Compiler/config.py
        Compiler/dijkstra.py
        Compiler/exceptions.py
        Compiler/floatingpoint.py
        Compiler/graph.py
        Compiler/gs.py
        Compiler/instructions.py
        Compiler/instructions_base.py
        Compiler/library.py
        Compiler/ml.py
        Compiler/mpc_math.py
        Compiler/oram.py
        Compiler/path_oram.py
        Compiler/permutation.py
        Compiler/program.py
        Compiler/tools.py
        Compiler/types.py
        Compiler/util.py
        doc/Compiler.rst
        doc/conf.py
        doc/index.rst
        doc/Makefile
        ECDSA/EcdsaOptions.h
        ECDSA/Fake-ECDSA.cpp
        ECDSA/fake-spdz-ecdsa-party.cpp
        ECDSA/hm-ecdsa-party.hpp
        ECDSA/mal-rep-ecdsa-party.cpp
        ECDSA/mal-shamir-ecdsa-party.cpp
        ECDSA/mascot-ecdsa-party.cpp
        ECDSA/ot-ecdsa-party.hpp
        ECDSA/P256Element.cpp
        ECDSA/P256Element.h
        ECDSA/preprocessing.hpp
        ECDSA/README.md
        ECDSA/rep-ecdsa-party.cpp
        ECDSA/semi-ecdsa-party.cpp
        ECDSA/shamir-ecdsa-party.cpp
        ECDSA/sign.hpp
        Exceptions/Exceptions.h
        ExternalIO/bankers-bonus-client.cpp
        ExternalIO/README.md
        FHE/AddableVector.cpp
        FHE/AddableVector.h
        FHE/Ciphertext.cpp
        FHE/Ciphertext.h
        FHE/DiscreteGauss.cpp
        FHE/DiscreteGauss.h
        FHE/FFT.cpp
        FHE/FFT.h
        FHE/FFT_Data.cpp
        FHE/FFT_Data.h
        FHE/FHE_Keys.cpp
        FHE/FHE_Keys.h
        FHE/FHE_Params.cpp
        FHE/FHE_Params.h
        FHE/Generator.h
        FHE/Matrix.cpp
        FHE/Matrix.h
        FHE/NoiseBounds.cpp
        FHE/NoiseBounds.h
        FHE/NTL-Subs.cpp
        FHE/NTL-Subs.h
        FHE/P2Data.cpp
        FHE/P2Data.h
        FHE/Plaintext.cpp
        FHE/Plaintext.h
        FHE/PPData.cpp
        FHE/PPData.h
        FHE/QGroup.cpp
        FHE/QGroup.h
        FHE/Random_Coins.cpp
        FHE/Random_Coins.h
        FHE/Ring.cpp
        FHE/Ring.h
        FHE/Ring_Element.cpp
        FHE/Ring_Element.h
        FHE/Rq_Element.cpp
        FHE/Rq_Element.h
        FHE/Subroutines.cpp
        FHE/Subroutines.h
        FHE/tools.h
        FHEOffline/config.h
        FHEOffline/CutAndChooseMachine.cpp
        FHEOffline/CutAndChooseMachine.h
        FHEOffline/DataSetup.cpp
        FHEOffline/DataSetup.h
        FHEOffline/DistDecrypt.cpp
        FHEOffline/DistDecrypt.h
        FHEOffline/DistKeyGen.cpp
        FHEOffline/DistKeyGen.h
        FHEOffline/EncCommit.cpp
        FHEOffline/EncCommit.h
        FHEOffline/FHE-Subroutines.cpp
        FHEOffline/Multiplier.cpp
        FHEOffline/Multiplier.h
        FHEOffline/PairwiseGenerator.cpp
        FHEOffline/PairwiseGenerator.h
        FHEOffline/PairwiseMachine.cpp
        FHEOffline/PairwiseMachine.h
        FHEOffline/PairwiseSetup.cpp
        FHEOffline/PairwiseSetup.h
        FHEOffline/Player-Offline.h
        FHEOffline/Producer.cpp
        FHEOffline/Producer.h
        FHEOffline/Proof.cpp
        FHEOffline/Proof.h
        FHEOffline/Prover.cpp
        FHEOffline/Prover.h
        FHEOffline/Reshare.cpp
        FHEOffline/Reshare.h
        FHEOffline/Sacrificing.cpp
        FHEOffline/Sacrificing.h
        FHEOffline/SimpleDistDecrypt.cpp
        FHEOffline/SimpleDistDecrypt.h
        FHEOffline/SimpleEncCommit.cpp
        FHEOffline/SimpleEncCommit.h
        FHEOffline/SimpleGenerator.cpp
        FHEOffline/SimpleGenerator.h
        FHEOffline/SimpleMachine.cpp
        FHEOffline/SimpleMachine.h
        FHEOffline/Verifier.cpp
        FHEOffline/Verifier.h
        GC/Access.h
        GC/ArgTuples.h
        GC/BitAdder.h
        GC/BitAdder.hpp
        GC/CcdPrep.h
        GC/CcdSecret.h
        GC/CcdShare.h
        GC/Clear.h
        GC/config.h
        GC/FakeSecret.cpp
        GC/FakeSecret.h
        GC/Instruction.h
        GC/Instruction.hpp
        GC/Instruction_inline.h
        GC/instructions.h
        GC/Machine.cpp
        GC/Machine.h
        GC/Machine.hpp
        GC/MaliciousCcdSecret.h
        GC/MaliciousCcdShare.h
        GC/MaliciousRepSecret.h
        GC/Memory.h
        GC/NoShare.h
        GC/PersonalPrep.h
        GC/PersonalPrep.hpp
        GC/Processor.h
        GC/Processor.hpp
        GC/Program.h
        GC/Program.hpp
        GC/RepPrep.h
        GC/RepPrep.hpp
        GC/RuntimeBranching.h
        GC/Secret.h
        GC/Secret.hpp
        GC/Secret_inline.h
        GC/SemiHonestRepPrep.cpp
        GC/SemiHonestRepPrep.h
        GC/SemiPrep.cpp
        GC/SemiPrep.h
        GC/SemiSecret.cpp
        GC/SemiSecret.h
        GC/ShareParty.h
        GC/ShareParty.hpp
        GC/ShareSecret.h
        GC/ShareSecret.hpp
        GC/ShareThread.h
        GC/ShareThread.hpp
        GC/ShiftableTripleBuffer.h
        GC/square64.cpp
        GC/square64.h
        GC/Thread.h
        GC/Thread.hpp
        GC/ThreadMaster.h
        GC/ThreadMaster.hpp
        GC/TinierPrep.h
        GC/TinierSecret.h
        GC/TinierShare.h
        GC/TinierSharePrep.h
        GC/TinierSharePrep.hpp
        GC/TinyMC.cpp
        GC/TinyMC.h
        GC/TinyPrep.h
        GC/TinyPrep.hpp
        GC/TinySecret.cpp
        GC/TinySecret.h
        GC/TinyShare.cpp
        GC/TinyShare.h
        GC/VectorInput.h
        GC/VectorProtocol.h
        GC/VectorProtocol.hpp
        Machines/bmr-program-party.cpp
        Machines/bmr-program-tparty.cpp
        Machines/brain-party.cpp
        Machines/ccd-party.cpp
        Machines/chaigear-party.cpp
        Machines/cowgear-party.cpp
        Machines/hemi-party.cpp
        Machines/mal-rep-bmr-party.cpp
        Machines/mal-shamir-bmr-party.cpp
        Machines/malicious-ccd-party.cpp
        Machines/malicious-rep-bin-party.cpp
        Machines/malicious-rep-field-party.cpp
        Machines/malicious-rep-ring-party.cpp
        Machines/malicious-shamir-party.cpp
        Machines/multi-replicated-bin-party.cpp
        Machines/mama-party.cpp
        Machines/mascot-party.cpp
        Machines/OText_main.cpp
        Machines/OTMachine.cpp
        Machines/OTMachine.h
        Machines/OutputCheck.h
        Machines/Player-Online.cpp
        Machines/Player-Online.hpp
        Machines/ps-rep-field-party.cpp
        Machines/ps-rep-ring-party.cpp
        Machines/real-bmr-party.cpp
        Machines/rep-bmr-party.cpp
        Machines/Rep.hpp
        Machines/replicated-bin-party.cpp
        Machines/replicated-field-party.cpp
        Machines/replicated-ring-party.cpp
        Machines/RepRing.hpp
        Machines/semi-bin-party.cpp
        Machines/semi-party.cpp
        Machines/Semi.hpp
        Machines/semi2k-party.cpp
        Machines/shamir-bmr-party.cpp
        Machines/shamir-party.cpp
        Machines/ShamirMachine.h
        Machines/ShamirMachine.hpp
        Machines/soho-party.cpp
        Machines/SPDZ.cpp
        Machines/SPDZ.hpp
        Machines/SPDZ2^64+48.cpp
        Machines/SPDZ2^64+64.cpp
        Machines/SPDZ2^72+48.cpp
        Machines/SPDZ2^72+64.cpp
        Machines/spdz2k-party.cpp
        Machines/SPDZ2k.hpp
        Machines/tinier-party.cpp
        Machines/tiny-party.cpp
        Machines/TripleMachine.cpp
        Machines/yao-party.cpp
        Math/bigint.cpp
        Math/bigint.h
        Math/bigint.hpp
        Math/Bit.cpp
        Math/Bit.h
        Math/BitVec.cpp
        Math/BitVec.h
        Math/config.h
        Math/field_types.h
        Math/FixedVec.h
        Math/fixint.h
        Math/gf2n.cpp
        Math/gf2n.h
        Math/gf2nlong.cpp
        Math/gf2nlong.h
        Math/gfp.h
        Math/gfp.hpp
        Math/Integer.h
        Math/Integer.hpp
        Math/modp.h
        Math/modp.hpp
        Math/mpn_fixed.h
        Math/operators.h
        Math/Setup.cpp
        Math/Setup.h
        Math/Setup.hpp
        Math/Square.cpp
        Math/Square.h
        Math/Square.hpp
        Math/ValueInterface.h
        Math/Z2k.h
        Math/Z2k.hpp
        Math/Zp_Data.cpp
        Math/Zp_Data.h
        Networking/CryptoPlayer.cpp
        Networking/CryptoPlayer.h
        Networking/data.h
        Networking/Player.cpp
        Networking/Player.h
        Networking/Receiver.cpp
        Networking/Receiver.h
        Networking/Sender.cpp
        Networking/Sender.h
        Networking/Server.cpp
        Networking/Server.h
        Networking/ServerSocket.cpp
        Networking/ServerSocket.h
        Networking/sockets.cpp
        Networking/sockets.h
        Networking/ssl_sockets.h
        OT/BaseOT.cpp
        OT/BaseOT.h
        OT/BitDiagonal.cpp
        OT/BitDiagonal.h
        OT/BitMatrix.h
        OT/BitMatrix.hpp
        OT/config.h
        OT/MamaRectangle.h
        OT/MascotParams.cpp
        OT/MascotParams.h
        OT/NPartyTripleGenerator.h
        OT/NPartyTripleGenerator.hpp
        OT/OTCorrelator.hpp
        OT/OTExtension.cpp
        OT/OTExtension.h
        OT/OTExtensionWithMatrix.cpp
        OT/OTExtensionWithMatrix.h
        OT/OTMultiplier.h
        OT/OTMultiplier.hpp
        OT/OTTripleSetup.cpp
        OT/OTTripleSetup.h
        OT/OTVole.h
        OT/OTVole.hpp
        OT/Rectangle.h
        OT/Rectangle.hpp
        OT/Row.h
        OT/Row.hpp
        OT/square128.cpp
        OT/Tools.h
        OT/Triple.hpp
        OT/TripleMachine.h
        Processor/BaseMachine.cpp
        Processor/BaseMachine.h
        Processor/Binary_File_IO.h
        Processor/Binary_File_IO.hpp
        Processor/config.h
        Processor/Data_Files.h
        Processor/Data_Files.hpp
        Processor/DataPositions.cpp
        Processor/DummyProtocol.h
        Processor/ExternalClients.cpp
        Processor/ExternalClients.h
        Processor/FixInput.cpp
        Processor/FixInput.h
        Processor/FloatInput.cpp
        Processor/FloatInput.h
        Processor/Input.h
        Processor/Input.hpp
        Processor/InputTuple.h
        Processor/Instruction.h
        Processor/Instruction.hpp
        Processor/IntInput.h
        Processor/IntInput.hpp
        Processor/Machine.h
        Processor/Machine.hpp
        Processor/Memory.h
        Processor/Memory.hpp
        Processor/NoLivePrep.h
        Processor/Online-Thread.h
        Processor/Online-Thread.hpp
        Processor/OnlineOptions.cpp
        Processor/OnlineOptions.h
        Processor/PrivateOutput.h
        Processor/PrivateOutput.hpp
        Processor/Processor.h
        Processor/Processor.hpp
        Processor/ProcessorBase.h
        Processor/ProcessorBase.hpp
        Processor/Program.cpp
        Processor/Program.h
        Processor/RingOptions.cpp
        Processor/RingOptions.h
        Processor/ThreadJob.h
        Processor/ThreadQueue.h
        Processor/ThreadQueues.cpp
        Processor/ThreadQueues.h
        Programs/Source/aes.mpc
        Programs/Source/aes_circuit.mpc
        Programs/Source/bankers_bonus.mpc
        Programs/Source/benchmark_conv.mpc
        Programs/Source/benchmark_mobilenet.mpc
        Programs/Source/benchmark_net.mpc
        Programs/Source/benchmark_secureNN.mpc
        Programs/Source/benchmark_sops_fixed_length.mpc
        Programs/Source/benchmark_sops_fixed_num_sops.mpc
        Programs/Source/bio.mpc
        Programs/Source/blink.mpc
        Programs/Source/dijkstra_tutorial.mpc
        Programs/Source/gale-shapley_tutorial.mpc
        Programs/Source/gc_and.mpc
        Programs/Source/gc_oram.mpc
        Programs/Source/htmac.mpc
        Programs/Source/idash_predict.mpc
        Programs/Source/idash_train.mpc
        Programs/Source/logreg.mpc
        Programs/Source/oram_tutorial.mpc
        Programs/Source/prf_leg.mpc
        Programs/Source/prf_mimc.mpc
        Programs/Source/regression.mpc
        Programs/Source/test_gc.mpc
        Programs/Source/test_sbitfix.mpc
        Programs/Source/test_sbitint.mpc
        Programs/Source/tf.mpc
        Programs/Source/tpmpc_tutorial.mpc
        Programs/Source/tutorial.mpc
        Programs/Source/vickrey.mpc
        Protocols/Beaver.h
        Protocols/Beaver.hpp
        Protocols/BrainPrep.h
        Protocols/BrainPrep.hpp
        Protocols/BrainShare.h
        Protocols/ChaiGearPrep.h
        Protocols/ChaiGearPrep.hpp
        Protocols/ChaiGearShare.h
        Protocols/CowGearOptions.cpp
        Protocols/CowGearOptions.h
        Protocols/CowGearPrep.h
        Protocols/CowGearPrep.hpp
        Protocols/CowGearShare.h
        Protocols/DabitSacrifice.h
        Protocols/DabitSacrifice.hpp
        Protocols/edabit.h
        Protocols/fake-stuff.h
        Protocols/fake-stuff.hpp
        Protocols/HemiPrep.h
        Protocols/HemiPrep.hpp
        Protocols/HemiShare.h
        Protocols/LimitedPrep.h
        Protocols/LimitedPrep.hpp
        Protocols/MAC_Check.h
        Protocols/MAC_Check.hpp
        Protocols/MAC_Check_Base.h
        Protocols/MAC_Check_Base.hpp
        Protocols/MaliciousRep3Share.h
        Protocols/MaliciousRepMC.h
        Protocols/MaliciousRepMC.hpp
        Protocols/MaliciousRepPrep.h
        Protocols/MaliciousRepPrep.hpp
        Protocols/MaliciousRingPrep.hpp
        Protocols/MaliciousShamirMC.h
        Protocols/MaliciousShamirMC.hpp
        Protocols/MaliciousShamirShare.h
        Protocols/MalRepRingOptions.cpp
        Protocols/MalRepRingOptions.h
        Protocols/MalRepRingPrep.h
        Protocols/MalRepRingPrep.hpp
        Protocols/MalRepRingShare.h
        Protocols/MamaPrep.h
        Protocols/MamaPrep.hpp
        Protocols/MamaShare.h
        Protocols/MascotPrep.h
        Protocols/MascotPrep.hpp
        Protocols/MultiReplicated.h
        Protocols/MultiReplicated.hpp
        Protocols/MultiReplicatedMC.h
        Protocols/MultiReplicatedMC.hpp
        Protocols/PostSacrifice.h
        Protocols/PostSacrifice.hpp
        Protocols/PostSacriRepFieldShare.h
        Protocols/PostSacriRepRingShare.h
        Protocols/RandomPrep.h
        Protocols/Rep3Share.h
        Protocols/Rep3Share2k.h
        Protocols/Replicated.h
        Protocols/Replicated.hpp
        Protocols/ReplicatedInput.h
        Protocols/ReplicatedInput.hpp
        Protocols/ReplicatedMachine.h
        Protocols/ReplicatedMachine.hpp
        Protocols/ReplicatedMC.h
        Protocols/ReplicatedMC.hpp
        Protocols/ReplicatedPrep.h
        Protocols/ReplicatedPrep.hpp
        Protocols/ReplicatedPrep2k.h
        Protocols/ReplicatedPrivateOutput.h
        Protocols/ReplicatedPrivateOutput.hpp
        Protocols/RingOnlyPrep.h
        Protocols/RingOnlyPrep.hpp
        Protocols/Semi2kShare.h
        Protocols/SemiInput.h
        Protocols/SemiInput.hpp
        Protocols/SemiMC.h
        Protocols/SemiMC.hpp
        Protocols/SemiPrep.h
        Protocols/SemiPrep.hpp
        Protocols/SemiPrep2k.h
        Protocols/SemiShare.h
        Protocols/Shamir.h
        Protocols/Shamir.hpp
        Protocols/ShamirInput.h
        Protocols/ShamirInput.hpp
        Protocols/ShamirMC.h
        Protocols/ShamirMC.hpp
        Protocols/ShamirShare.h
        Protocols/Share.h
        Protocols/Share.hpp
        Protocols/ShareInterface.h
        Protocols/ShuffleSacrifice.h
        Protocols/ShuffleSacrifice.hpp
        Protocols/SohoPrep.h
        Protocols/SohoPrep.hpp
        Protocols/SohoShare.h
        Protocols/SPDZ.h
        Protocols/Spdz2kPrep.h
        Protocols/Spdz2kPrep.hpp
        Protocols/Spdz2kShare.h
        Scripts/bmr-program-run-remote.sh
        Scripts/bmr-program-run.sh
        Scripts/brain.sh
        Scripts/build.sh
        Scripts/ccd.sh
        Scripts/chaigear.sh
        Scripts/cowgear.sh
        Scripts/fake-spdz-real-bmr.sh
        Scripts/fixed-rep-to-float.py
        Scripts/generate-cert.sh
        Scripts/hemi.sh
        Scripts/mal-ccd.sh
        Scripts/mal-rep-bin.sh
        Scripts/mal-rep-bmr.sh
        Scripts/mal-rep-field.sh
        Scripts/mal-rep-ring.sh
        Scripts/mal-shamir-bmr.sh
        Scripts/mal-shamir.sh
        Scripts/mama.sh
        Scripts/mascot.sh
        Scripts/process-tf.py
        Scripts/ps-rep-field.sh
        Scripts/ps-rep-ring.sh
        Scripts/real-bmr.sh
        Scripts/rep-bmr.sh
        Scripts/rep-field.sh
        Scripts/replicated.sh
        Scripts/ring.sh
        Scripts/run-common.sh
        Scripts/run-online.sh
        Scripts/semi-bin.sh
        Scripts/semi.sh
        Scripts/semi2k.sh
        Scripts/setup-clients.sh
        Scripts/setup-online.sh
        Scripts/setup-ssl.sh
        Scripts/shamir-bmr.sh
        Scripts/shamir.sh
        Scripts/soho.sh
        Scripts/spdz2k.sh
        Scripts/test_ecdsa.sh
        Scripts/test_tutorial.sh
        Scripts/tinier.sh
        Scripts/tiny.sh
        Scripts/tldr.sh
        Scripts/yao.sh
        Tools/aes-ni.cpp
        Tools/aes.cpp
        Tools/aes.h
        Tools/avx_memcpy.h
        Tools/benchmarking.h
        Tools/BitVector.cpp
        Tools/BitVector.h
        Tools/Buffer.cpp
        Tools/Buffer.h
        Tools/Bundle.h
        Tools/callgrind.h
        Tools/CheckVector.h
        Tools/Commit.cpp
        Tools/Commit.h
        Tools/cpu_support.h
        Tools/ezOptionParser-MIT-LICENSE
        Tools/ezOptionParser.h
        Tools/FixedVector.h
        Tools/FlexBuffer.cpp
        Tools/FlexBuffer.h
        Tools/Hash.cpp
        Tools/Hash.h
        Tools/int.h
        Tools/Lock.cpp
        Tools/Lock.h
        Tools/MemoryUsage.h
        Tools/mkpath.cpp
        Tools/mkpath.h
        Tools/MMO.h
        Tools/MMO.hpp
        Tools/names.cpp
        Tools/NetworkOptions.cpp
        Tools/NetworkOptions.h
        Tools/oct.h
        Tools/octetStream.cpp
        Tools/octetStream.h
        Tools/OfflineMachineBase.cpp
        Tools/OfflineMachineBase.h
        Tools/parse.h
        Tools/Phase.cpp
        Tools/PointerVector.h
        Tools/pprint.h
        Tools/random.cpp
        Tools/random.h
        Tools/Signal.cpp
        Tools/Signal.h
        Tools/Subroutines.cpp
        Tools/Subroutines.h
        Tools/Subroutines.hpp
        Tools/SwitchableOutput.h
        Tools/time-func.cpp
        Tools/time-func.h
        Tools/WaitQueue.h
        Tools/Worker.h
        Utils/Check-Offline-Z2k.cpp
        Utils/Check-Offline.cpp
        Utils/check-passive.cpp
        Utils/cnc-offline.cpp
        Utils/default-prime-length.cpp
        Utils/Fake-Offline.cpp
        Utils/galois-degree.cpp
        Utils/gc-emulate.cpp
        Utils/gen_input_f2n.cpp
        Utils/gen_input_fp.cpp
        Utils/ot-offline.cpp
        Utils/pairwise-offline.cpp
        Utils/Server.cpp
        Utils/simple-offline.cpp
        Utils/spdz2-offline.cpp
        Yao/config.h
        Yao/YaoAndJob.h
        Yao/YaoCommon.h
        Yao/YaoCommon.hpp
        Yao/YaoEvalMaster.cpp
        Yao/YaoEvalMaster.h
        Yao/YaoEvaluator.cpp
        Yao/YaoEvaluator.h
        Yao/YaoEvalWire.cpp
        Yao/YaoEvalWire.h
        Yao/YaoGarbleMaster.cpp
        Yao/YaoGarbleMaster.h
        Yao/YaoGarbler.cpp
        Yao/YaoGarbler.h
        Yao/YaoGarbleWire.cpp
        Yao/YaoGarbleWire.h
        Yao/YaoGate.cpp
        Yao/YaoGate.h
        Yao/YaoHalfGate.cpp
        Yao/YaoHalfGate.h
        Yao/YaoPlayer.cpp
        Yao/YaoPlayer.h
        Yao/YaoWire.h
        Yao/YaoWire.hpp
        azure-pipelines.yml
        CHANGELOG.md
        compile.py
        CONFIG
        HOSTS.example
        License.txt
        Makefile
        README.md)
